correct wrong position in formula page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -667,14 +667,14 @@ body {
 /* Sidebar Menus Formula Page Section */
 
 .sidenav-menu {
-    margin-top: 290px;
+    margin-top: 250px;
     width: 160px;
     position: fixed;
     z-index: 1;
-    top: 20px;
+    top: 10px;
     left: 10px;
     overflow-x: hidden;
-    padding: 8px 0;
+    padding: 8px ;
 }
 
 .sidenav-menu a {
